https://aicre-labs.github.io/signal-animation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signal-animation",
-  "homepage": "https://yourusername.github.io/signal-animation",
+  "homepage": "https://aicre-labs.github.io/signal-animation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
